# nmcc

./: .clang-format  CMakeLists.txt  diagnostics.c  error.c  file.c  lex.c  main.c  preprocess.c  preprocess1.c  span.c  validate.c
include/: nmast.h  nmerror.h  nmfile.h  nmmust.h  nmstring.h
include/nmcc/: nmast.h  nmcolors.h  nmdebug.h  nmdiagnostics.h  nmerror.h  nmfile.h  nmfmt.h  nmlex.h  nmmust.h  nmspan.h  nmstring.h  nmutils.h  nmvec.h  preprocess.h  preprocess1.h
libnmcc/: error.c  file.c  fmt.c  string.c  utils.c  vec.c
test/: lexer_multiline_comment.c  line_directive_lexer.c
test/preprocessor_include/: print_hello.h  test_preprocessor_include.c
